Cayley theme: increase fonts/spacing between sidebar li's https://redmine.hmdc.harvard.edu/issues/1495

--- a/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
+++ b/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
@@ -89,8 +89,7 @@ p.copy {
   }
 
 .sidebar {
-  font-size: 12px;
-  line-height: 1.41em;
+  font-size: 13px;
   }
 
 #sidebar-first,
